--- a/Webapp/Webapp/Views/Treatment/Add.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Add.cshtml
@@ -67,7 +67,7 @@
                     <div class="form-group">
                         <div class="col-xs-12">
                             <label for="Comments"><h4>Bericht</h4></label>
-                            <input type="text" class="form-control" asp-for="Comment" placeholder="Bericht" title="Bericht.">
+                            <input type="text" class="form-control" asp-for="Description.Description" placeholder="Bericht" title="Bericht.">
                             <br />
                             <br />
                         </div>
