--- a/Webapp/Webapp/Views/Treatment/Detail.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Detail.cshtml
@@ -70,7 +70,7 @@
                             <div class="col-xs-12">
                                 <label for="Comments"><h4>Bericht</h4></label>
                                 @*<label type="text" title="Opmerking behandeling">@Model.Comment</label>*@
-                                <input type="text" class="form-control" value="@Model.Comment" readonly="readonly">
+                                <input type="text" class="form-control" value="@Model.Description.Description" readonly="readonly">
                                 <br />
                                 <br />
                                 <button class="btn btn-primary" asp-action="Index" formmethod="post">Ga terug</button>
