--- a/Webapp/Webapp/Views/Profile/Edit.cshtml
+++ b/Webapp/Webapp/Views/Profile/Edit.cshtml
@@ -63,8 +63,8 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="Username"><h4>Gebruikersnaam</h4></label>
-                                <input type="text" value="@Model.Patient.UserName" class="form-control" name="username" id="username" placeholder="username" title="voer je gebruikersnaam in">
+                                <label for="BSN"><h4>BSN</h4></label>
+                                <input type="text" value="@Model.Patient.BSN" class="form-control" name="BSN" id="BSN" placeholder="BSN" title="Voer hier je BSN in.">
                             </div>
                         </div>
                         <div class="form-group">
@@ -77,8 +77,8 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="BSN"><h4>BSN</h4></label>
-                                <input type="text" value="@Model.Patient.BSN" class="form-control" name="BSN" id="BSN" placeholder="BSN" title="Voer hier je BSN in.">
+                                <label for="Username"><h4>Gebruikersnaam</h4></label>
+                                <input type="text" value="@Model.Patient.UserName" class="form-control" name="username" id="username" placeholder="username" title="voer je gebruikersnaam in">
                             </div>
                         </div>
                         <div class="form-group">
@@ -134,8 +134,8 @@
                             </div>
                             <div class="col-xs-12">
                                 <br>
-                                <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Opslaan</button>
-                                <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Velden leeg maken</button>
+                                <a asp-controller="profile" asp-action="Update" button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Opslaan</a>
+                                <button class="btn btn-lg" input type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset gegevens</button>
                             </div>
                         </div>
 
