--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -43,8 +43,8 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="Username"><h4>Gebruikersnaam</h4></label>
-                                <p>@Model.Patient.UserName"</p>
+                                <label for="BSN"><h4>BSN</h4></label>
+                                <p>@Model.Patient.BSN</p>
                             </div>
                         </div>
                         <div class="form-group">
@@ -56,9 +56,10 @@
                         </div>
                         <div class="form-group">
 
+
                             <div class="col-xs-6">
-                                <label for="BSN"><h4>BSN</h4></label>
-                                <p>@Model.Patient.BSN</p>
+                                <label for="Username"><h4>Gebruikersnaam</h4></label>
+                                <p>@Model.Patient.UserName</p>
                             </div>
                         </div>
                         <div class="form-group">
