--- a/Webapp/Webapp/Views/Treatment/Edit.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Edit.cshtml
@@ -66,7 +66,7 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="Comments"><h4>Bericht</h4></label>
-                                <input type="text" class="form-control" asp-for="Description.Description" value="@Model.Description.Description" title="Bericht.">
+                                <input type="text" class="form-control" asp-for="Description" value="@Model.Description" title="Bericht.">
                                 <br />
                                 <br />
                                 <button type="submit" class="btn btn-primary" asp-action="Index" formmethod="post">Pas Aan</button>
