Treatment Detail View

--- a/Webapp/Webapp/Views/Treatment/Edit.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Edit.cshtml
@@ -69,7 +69,7 @@
                                 <input type="text" class="form-control" asp-for="Description" value="@Model.Description" title="Bericht.">
                                 <br />
                                 <br />
-                                <button type="submit" class="btn btn-primary" asp-action="Index" formmethod="post">Pas Aan</button>
+                                <button type="submit" class="btn btn-primary" asp-controller="Treatment" asp-action="Index" formmethod="post">Pas Aan</button>
                             </div>
                         </div>
                     </form>
