Toevoeging lijst patienten
Lijst patienten + onclick voor de datatable

--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -38,7 +38,7 @@
         });
 
         function initDataTable() {
-            $("#doctorTable").DataTable({
+            $("#treatmentTable").DataTable({
 
             });
         }
