--- a/Webapp/Webapp/Views/Treatment/Add.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Add.cshtml
@@ -20,7 +20,7 @@
                 <form class="form" method="post">
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <label for="name"><h4>Patiënt</h4></label>
+                            <label for="name" class="h4">Patiënt</label>
                             <input type="text" class="form-control" asp-for="PatientDetailViewModel.Name" placeholder="Naam van de patiënt" title="//Naam van de patiënt//">
                         </div>
                     </div>
