--- a/Webapp/Webapp/Views/Patient/Treatment.cshtml
+++ b/Webapp/Webapp/Views/Patient/Treatment.cshtml
@@ -60,26 +60,26 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-4">
-                                <label for="Begindate"><h4>Begindatum behandeling</h4></label>
+                            <div class="col-xs-3">
+                                <label for="Begindate"><h4>Begindatum</h4></label>
                                 <input type="date" class="form-control" name="begindate" id="begindate" placeholder="Begindatum behandeling" title="Begindatum behandeling" value="@Model.TreatmentDetailViewModels[0].BeginDate.ToString("yyyy-MM-dd")">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-2">
-                                <label for="BeginTime"><h4>Begin tijd</h4></label>
+                            <div class="col-xs-3">
+                                <label for="BeginTime"><h4>Begintijd</h4></label>
                                 <input type="time" class="form-control" name="beginTime" id="beginTime" title="Begintijd behandeling" value="@Model.TreatmentDetailViewModels[0].BeginDate.ToShortTimeString()">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-4">
-                                <label for="Enddate"><h4>Einddatum behandeling</h4></label>
+                            <div class="col-xs-3">
+                                <label for="Enddate"><h4>Einddatum</h4></label>
                                 <input type="date" class="form-control" name="enddate" id="enddate" placeholder="Einddatum behandeling" title="Einddatum behandeling" value="@Model.TreatmentDetailViewModels[0].EndDate.ToString("yyyy-MM-dd")">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-2">
-                                <label for="EndTime"><h4>Eind tijd</h4></label>
+                            <div class="col-xs-3">
+                                <label for="EndTime"><h4>Eindtijd</h4></label>
                                 <input type="time" class="form-control" name="endTime" id="endTime" title="Eindtijd behandeling" value="@Model.TreatmentDetailViewModels[0].EndDate.ToShortTimeString()">
                             </div>
                         </div>
