--- a/Webapp/Webapp/Views/Treatment/Add.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Add.cshtml
@@ -67,12 +67,12 @@
                     <div class="form-group">
                         <div class="col-xs-12">
                             <label for="Comments"><h4>Bericht</h4></label>
-                            <input type="text" class="form-control" asp-for="Description.Description" placeholder="Bericht" title="Bericht.">
+                            <input type="text" class="form-control" asp-for="Description" placeholder="Bericht" title="Bericht.">
                             <br />
                             <br />
                         </div>
                     </div>
-                    <button type="submit" asp-controller="Treatment" asp-action="Index" class="btn btn-primary">Maak Aan</button>
+                    <button type="submit" class="btn btn-primary" asp-controller="Treatment" asp-action="Add">Maak Aan</button>
                 </form>
                 <hr>
             </div><!--/tab-pane-->
