--- a/Webapp/Webapp/Views/Treatment/Edit.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Edit.cshtml
@@ -16,7 +16,7 @@
             <div class="tab-content">
                 <div class="tab-pane active" id="home">
                     <hr>
-                    <form class="form" action="##" method="post" id="registrationForm">
+                    <form class="form" method="post">
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="name"><h4>Patiënt</h4></label>
@@ -69,7 +69,7 @@
                                 <input type="text" class="form-control" asp-for="Description" value="@Model.Description" title="Bericht.">
                                 <br />
                                 <br />
-                                <button type="submit" class="btn btn-primary" asp-controller="Treatment" asp-action="Index" formmethod="post">Pas Aan</button>
+                                <button type="submit" class="btn btn-primary" asp-controller="Treatment" asp-action="Edit">Pas Aan</button>
                             </div>
                         </div>
                     </form>
