Fixed date + added Treatment.GetAge

--- a/Webapp/Webapp/Views/Patient/Treatment.cshtml
+++ b/Webapp/Webapp/Views/Patient/Treatment.cshtml
@@ -101,6 +101,13 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="ExecutedTreatmentTypes"><h4>Uitgevoerde type behandelingen</h4></label>
+                                @foreach (TreatmentDetailViewModel treatment in Model.TreatmentDetailviewModels)
+                                {
+                                    @if(Model.treatment.Age <= 90)
+                                    {
+
+                                    }
+                                }
                                 <li>behandeling 1</li>
                                 <li>behandeling 2</li>
                                 <li>behandeling 3</li>
