--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -51,7 +51,7 @@
 
                             <div class="col-xs-6">
                                 <label for="Birthday"><h4>Geboortedatum</h4></label>
-                                <p>@Model.Patient.Birth.ToString("yyyy-MM-dd")</p>
+                                <p>@Model.Patient.Birth.ToString("dd-MM-yyyy")</p>
                             </div>
                         </div>
                         <div class="form-group">
