--- a/Webapp/Webapp/Views/Patient/Index.cshtml
+++ b/Webapp/Webapp/Views/Patient/Index.cshtml
@@ -1,15 +1,44 @@
-﻿
+﻿@using Webapp.Models.Data;
+@model IEnumerable<Webapp.Models.PatientListViewModel>;
+
 @{
-    Layout = null;
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<h2>Patiëntenlijst</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-</body>
-</html>
+
+<table class="table table-striped table-hover" id="patientTable" style="width:100%;">
+    <thead>
+        <tr>
+            <th>Naam</th>
+            <th>Geslacht</th>
+            <th>Geboortedatum</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+           <tr>
+                <td>@item.Name</td>
+                <td>@item.Gender</td>
+                <td>@item.Birth</td>
+            </tr>
+        }
+    </tbody>
+</table>
+@section Scripts {
+    <script>
+        $("document").ready(function () {
+            var table = $('#patientTable').DataTable({
+                rowId: 'Id'
+            });
+
+            $('#patientTable tbody').on('click', 'tr', function () {
+                var data = table.row(this).data();
+                alert(' ' + data.rowId);
+            });
+        });
+    </script>
+}
