--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -5,9 +5,12 @@
 
 <h2>Treatment</h2>
 
-<p>
-    <a asp-action="Add">Create New</a>
-</p>
+@if (User.IsInRole("doctor"))
+{
+    <p>
+        <a asp-action="Add">Create New</a>
+    </p>
+}
 <table class="table table-striped table-hover" id="treatmentTable" style="width:100%;">
     <thead>
         <tr>
@@ -22,14 +25,17 @@
             <tr>
                 <td>@item.Name</td>
                 <td>@item.BeginDate</td>
-                <td>@item.EndDate</td>  
+                <td>@item.EndDate</td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @if (User.IsInRole("doctor"))
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                    }
                     @Html.ActionLink("Detail", "Treatment", "Patient", new { id = item.PatientDetailViewModel.Id })
                 </td>
             </tr>
         }
-    </tbody>
+</tbody>
 </table>
 @section Scripts {
     <script>
