selectable patients and types

--- a/Webapp/Webapp/Views/Treatment/Add.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Add.cshtml
@@ -21,7 +21,12 @@
                     <div class="form-group">
                         <div class="col-xs-12">
                             <label for="name" class="h4">Patiënt</label>
-                            <input type="text" class="form-control" asp-for="PatientDetailViewModel.Name" placeholder="Naam van de patiënt" title="//Naam van de patiënt//">
+                            <select asp-for="PatientDetailViewModel" type="text" class="form-control" placeholder="Naam van de patiënt" title="Naam van de patiënt.">
+                                @foreach (var Patient in Model.Patients)
+                                {
+                                <option>@Patient.Name</option>
+                                }
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
@@ -33,10 +38,11 @@
                     <div class="form-group">
                         <div class="col-xs-6">
                             <label for="nameTreatment"><h4>Behandelingstype</h4></label>
-                            <select type="text" class="form-control" asp-for="Type" placeholder="Type van de behandeling" title="Type van de behandeling.">
-                                <option>Behandeling 1</option>
-                                <option>Behandeling 2</option>
-                                <option>Behandeling 3</option>
+                            <select asp-for="TreatmentTypeDetailViewModel" type="text" class="form-control" placeholder="Type van de behandeling" title="Type van de behandeling.">
+                                @foreach (var Type in Model.TreatmentTypes)
+                                {
+                                    <option>@Type.Name</option>
+                                }
                             </select>
                         </div>
                     </div>
