--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -51,8 +51,8 @@
                                     <a href="#"><i class="fa fa-heartbeat fa-lg"></i> Type behandelingen <span class="arrow"></span></a>
                                 </li>
                                 <ul class="sub-menu collapse" id="typeTreatment">
-                                    <li><i class="fa fa-bar-chart fa-lg"></i> Overzicht</li>
-                                    <li><i class="fa fa-medkit fa-lg"></i> Nieuwe toevoegen</li>
+                                    <li><a asp-controller="TreatmentType" asp-action="Index"><i class="fa fa-bar-chart fa-lg"></i> Overzicht</a></li>
+                                    <li><a asp-controller="TreatmentType" asp-action="Create"><i class="fa fa-medkit fa-lg"></i> Nieuwe toevoegen</a></li>
                                 </ul>
                                 <li data-toggle="collapse" data-target="#doctors" class="collapsed">
                                     <a href="#"><i class="fa fa-user-md fa-lg"></i> Artsen <span class="arrow"></span></a>
