--- a/Webapp/Webapp/Views/Profile/Edit.cshtml
+++ b/Webapp/Webapp/Views/Profile/Edit.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Patiënt";
- Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
 
@@ -34,7 +34,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label for="Gender"><h4>Geslacht</h4></label>
-                                    <select tag="option" asp-for="Patient.Gender"  class="form-control" id="gender" placeholder="Voer je geslacht in" title="Voer je geslacht in.">
+                                    <select tag="option" asp-for="Patient.Gender" class="form-control" id="gender" placeholder="Voer je geslacht in" title="Voer je geslacht in.">
                                         @if (Model.Patient.Gender == Gender.Male)
                                         {
                                             <option selected>Man</option>
@@ -87,7 +87,7 @@
 
                                 <div class="col-xs-6">
                                     <label for="email"><h4>Email</h4></label>
-                                    <input type="email" asp-for="Patient.Email" value="@Model.Patient.Email" class="form-control"  id="email" placeholder="jouw@email.com" title="Voer je email in.">
+                                    <input type="email" asp-for="Patient.Email" value="@Model.Patient.Email" class="form-control" id="email" placeholder="jouw@email.com" title="Voer je email in.">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -101,7 +101,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label for="mobile"><h4>Mobiele telefoonnummer</h4></label>
-                                    <input type="tel" asp-for="Patient.PhoneNumber" value="@Model.Patient.PhoneNumber" class="form-control"  id="mobile" placeholder="Voer mobiele nummer in" title="Voer mobiele nummer in.">
+                                    <input type="tel" asp-for="Patient.PhoneNumber" value="@Model.Patient.PhoneNumber" class="form-control" id="mobile" placeholder="Voer mobiele nummer in" title="Voer mobiele nummer in.">
                                 </div>
                             </div>
 
@@ -173,7 +173,7 @@
 
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" asp-for="Patient.PrivBirthDate"checked="@Model.Patient.PrivBirthDate">
+                                        <input type="checkbox" asp-for="Patient.PrivBirthDate" checked="@Model.Patient.PrivBirthDate">
                                         <span class="slider"></span>
                                     </label>
                                     Geboortedatum
@@ -232,5 +232,115 @@
 }
 else if (Model.Doctor != null)
 {
+    <link rel="stylesheet" href="~/css/User.css" />
+    <div class="container bootstrap snippet">
+        <div class="row">
+            <div class="col-sm-10"><h1>Doctor</h1><hr /></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-9">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a data-toggle="tab" href="#home">Algemeen</a></li>
+                </ul>
 
+                <div class="tab-content">
+                    <div class="tab-pane active" id="home">
+                        <hr>
+                        <form class="form" method="post" id="registrationForm">
+                            <div class="form-group">
+                                <div class="col-xs-6">
+                                    <label for="name"><h4>Volledige naam</h4></label>
+                                    <input type="text" asp-for="Doctor.Name" value="@Model.Doctor.Name" class="form-control" id="name" placeholder="Voer je naam in" title="Voer je naam in.">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-xs-6">
+                                    <label for="Gender"><h4>Geslacht</h4></label>
+                                    <select tag="option" asp-for="Doctor.Gender" class="form-control" id="gender" placeholder="Voer je geslacht in" title="Voer je geslacht in.">
+                                        @if (Model.Doctor.Gender == Gender.Male)
+                                        {
+                                            <option selected>Man</option>
+                                            <option>Vrouw</option>
+                                            <option>Anders</option>
+                                        }
+                                        else if (Model.Doctor.Gender == Gender.Female)
+                                        {
+                                            <option>Man</option>
+                                            <option selected>Vrouw</option>
+                                            <option>Anders</option>
+                                        }
+                                        else if (Model.Doctor.Gender == Gender.Other)
+                                        {
+                                            <option>Man</option>
+                                            <option>Vrouw</option>
+                                            <option selected>Anders</option>
+                                        }
+                                        else
+                                        {
+                                            <option>Man</option>
+                                            <option>Vrouw</option>
+                                            <option>Anders</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+
+                                <div class="col-xs-6">
+                                    <label for="BSN"><h4>BSN</h4></label>
+                                    <input type="text" asp-for="Doctor.EmployeeNumber" value="@Model.Doctor.EmployeeNumber" class="form-control" id="BSN" placeholder="BSN" title="Voer hier je BSN in.">
+                                </div>
+                            </div>
+                            <div class="form-group">
+
+                                <div class="col-xs-6">
+                                    <label for="Birthday"><h4>Geboortedatum</h4></label>
+                                    <input type="date" asp-for="Doctor.Birth" value="@Model.Doctor.Birth.ToString("yyyy-MM-dd")" class="form-control" id="birthday" placeholder="Geboortedatum" title="Voer hier je Geboortedatum in.">
+                                </div>
+                            </div>
+                            <div class="form-group">
+
+                                <div class="col-xs-6">
+                                    <label for="Username"><h4>Gebruikersnaam</h4></label>
+                                    <input type="text" asp-for="Doctor.UserName" value="@Model.Doctor.UserName" class="form-control" id="username" placeholder="username" title="voer je gebruikersnaam in">
+                                </div>
+                            </div>
+                            <div class="form-group">
+
+                                <div class="col-xs-6">
+                                    <label for="email"><h4>Email</h4></label>
+                                    <input type="email" asp-for="Doctor.Email" value="@Model.Doctor.Email" class="form-control" id="email" placeholder="jouw@email.com" title="Voer je email in.">
+                                </div>
+                            </div>
+                            <div class="form-group">
+
+                                <div class="col-xs-6">
+                                    <label for="phonenumber"><h4>Telefoonnummer</h4></label>
+                                    <input type="tel" asp-for="Doctor.PhoneNumber" value="@Model.Doctor.PhoneNumber" class="form-control" id="phone" placeholder="Voer je telefoonnummer in" title="Voer je telefooonnummer in.">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="col-xs-6">
+                                    <label for="mobile"><h4>Mobiele telefoonnummer</h4></label>
+                                    <input type="tel" asp-for="Doctor.PhoneNumber" value="@Model.Doctor.PhoneNumber" class="form-control" id="mobile" placeholder="Voer mobiele nummer in" title="Voer mobiele nummer in.">
+                                </div>
+                            </div>
+
+
+                            <div class="form-group">
+                                <div class="col-xs-12">
+                                    <br>
+                                    <button class="btn btn-lg btn-success" type="submit" asp-controller="profile" asp-action="Edit"><i class="glyphicon glyphicon-ok-sign"></i> Opslaan</button>
+                                    <button class="btn btn-lg" input type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset gegevens</button>
+                                </div>
+                            </div>
+                        </form>
+
+                        <hr>
+                    </div><!--/tab-pane-->
+                </div><!--/tab-pane-->
+            </div><!--/tab-content-->
+        </div><!--/col-9-->
+    </div><!--/row-->
 }
