arts kan gegevens aanpassen

--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -211,6 +211,7 @@ else if (Model.Doctor != null)
             <div class="col-sm-9">
                 <ul class="nav nav-tabs">
                     <li class="active"><a data-toggle="tab" href="#home">Algemeen</a></li>
+                    <li class="active"><a data-toggle="tab" href="#home">Privacy</a></li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane active" id="home">
