--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -211,7 +211,7 @@ else if (Model.Doctor != null)
             <div class="col-sm-9">
                 <ul class="nav nav-tabs">
                     <li class="active"><a data-toggle="tab" href="#home">Algemeen</a></li>
-                    <li class="active"><a data-toggle="tab" href="#home">Privacy</a></li>
+                    <li><a data-toggle="tab" href="#privacy">Privacy</a></li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane active" id="home">
@@ -284,7 +284,32 @@ else if (Model.Doctor != null)
                             </div>
                         </form>
                         <hr>
+
                     </div><!--/tab-pane-->
+                    <!-- Hier komt de code voor de tab privacy-->
+                    <div class="tab-pane" id="privacy">
+                        <form class="form" action="#" method="post" id="registrationForm">
+                            <div class="form-group">
+                                <div class="col-xs-6">
+                                    <label class="switch">
+                                        <input type="checkbox" checked="@Model.Doctor.PrivMail" disabled>
+                                        <span class="slider"></span>
+                                    </label>
+                                    Email
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-xs-6">
+                                    <label class="switch">
+                                        <input type="checkbox" checked="@Model.Doctor.PrivPhonenumber" disabled>
+                                        <span class="slider"></span>
+                                    </label>
+                                    Telefoonnummer
+                                </div>
+                            </div>
+                        </form>
+                    </div><!--/tab-pane-->
+                    <!--     Hier komt de code voor de tab privacy-->
                 </div><!--/tab-pane-->
             </div><!--/tab-content-->
         </div><!--/col-9-->
