--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -205,7 +205,7 @@ else if (Model.Doctor != null)
 {
     <div class="container bootstrap snippet">
         <div class="row">
-            <div class="col-sm-10"><h1>Patiënt</h1><hr /></div>
+            <div class="col-sm-10"><h1>Doctor</h1><hr /></div>
         </div>
         <div class="row">
             <div class="col-sm-9">
@@ -229,9 +229,13 @@ else if (Model.Doctor != null)
                                     {
                                         <p>Man</p>
                                     }
-                                    else
+                                    else if (Model.Doctor.Gender == Gender.Female)
                                     {
                                         <p>Vrouw</p>
+                                    }
+                                    else
+                                    {
+                                        <p>Anders</p>
                                     }
                                 </div>
                             </div>
@@ -273,14 +277,25 @@ else if (Model.Doctor != null)
                             </div>
 
                             <div class="form-group">
+
                                 <div class="col-xs-6">
                                     <label for="mobile"><h4>Mobiele telefoonnummer</h4></label>
                                     <p>@Model.Doctor.PhoneNumber</p>
                                 </div>
+                            </div>
+                            <div class="form-group">
+
                                 <div class="col-xs-12">
-                                    <br>
-                                    <a asp-controller="profile" asp-action="edit" class="btn btn-primary"><i class="fa fa-edit"></i> Aanpassen</a>
+                                    <label for="treatments"><h4>Uitvoerbare behandelingen</h4></label>
+                                    @foreach (var Type in Model.Doctor.TreatmentTypes)
+                                    {
+                                        <option>@Type.Name</option>
+                                    }
                                 </div>
+                            </div>
+                            <div class="col-xs-12">
+                                <br>
+                                <a asp-controller="profile" asp-action="edit" class="btn btn-primary"><i class="fa fa-edit"></i> Aanpassen</a>
                             </div>
                         </form>
                         <hr>
