--- a/Webapp/Webapp/Views/Home/Index.cshtml
+++ b/Webapp/Webapp/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                     <div class="form-group">
                         <label for="password" class="col-sm-3 control-label">Password</label>
                         <div class="col-sm-9">
-                            <input type="password" id="password" placeholder="Password" class="form-control" name="password">
+                            <input type="password" id="password" placeholder="Password" class="form-control" name="password" value="Test123!">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block" asp-action="Login" formmethod="post">Login</button>
