Context update / Classes
Dubbele generic context verwijderd.
FK ids toegevoegd als properties

--- a/Webapp/Webapp/Views/Login/Index.cshtml
+++ b/Webapp/Webapp/Views/Login/Index.cshtml
@@ -31,7 +31,7 @@
                     <div class="form-group">
                         <label for="password" class="col-sm-3 control-label">Password</label>
                         <div class="col-sm-9">
-                            <input type="password" id="password" placeholder="Password" class="form-control" name="password">
+                            <input type="password" id="password" placeholder="Password" class="form-control" name="password" value="Test123!">
                         </div>
                     </div>
                     <p style="color: red;">@ViewData["errorMsg"]</p>
