DoctorController now returns ViewModel

--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -25,9 +25,9 @@
                 <td>@item.Name</td>
                 <td>@item.Function</td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.EmployeeNumber }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.EmployeeNumber }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.EmployeeNumber })
                 </td>
             </tr>
         }
