--- a/Webapp/Webapp/Views/TreatmentType/Create.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Create.cshtml
@@ -24,6 +24,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @*TODO: fix dat je niet "Select department" als keuze kunt kiezen, geeft crash*@
                 <label asp-for="DepartmentId" class="control-label"></label>
                 @Html.DropDownListFor(model => model.DepartmentId,
                     Model.Departments,
