--- a/Webapp/Webapp/Views/TreatmentType/Edit.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Edit.cshtml
@@ -24,12 +24,14 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @*TODO: fix dat je niet "Select department" als keuze kunt kiezen, geeft crash*@
                 <label asp-for="DepartmentId" class="control-label"></label>
                 @Html.DropDownListFor(model => model.DepartmentId,
                     Model.Departments,
                     "Select department",
                     new { @class = "form-control" })
             </div>
+            
             <div class="form-group">
                 <div class="checkbox">
                     <label>
