--- a/Webapp/Webapp/Views/Profile/Inzie.cshtml
+++ b/Webapp/Webapp/Views/Profile/Inzie.cshtml
@@ -58,11 +58,11 @@
                             }
 
                             @*<div class="form-group">
-                                    <div class="col-xs-6">
-                                        <label for="Username" class="h4">Gebruikersnaam</label>
-                                        <p>@Model.Patient.UserName</p>
-                                    </div>
-                                </div>*@
+            <div class="col-xs-6">
+                <label for="Username" class="h4">Gebruikersnaam</label>
+                <p>@Model.Patient.UserName</p>
+            </div>
+        </div>*@
 
                             @if (Model.Patient.PrivMail)
                             {
@@ -119,6 +119,10 @@
                                     </div>
                                 </div>
                             }
+                            <div class="col-xs-12">
+                                <br>
+                                <a asp-controller="Patient" asp-action="Index" class="btn btn-primary"><i class="fa fa-chevron-left"></i> Terug</a>
+                            </div>
                         </form>
                         <hr>
                     </div>
@@ -172,6 +176,12 @@ else if (Model.Doctor != null)
                                     {
                                         <option>@Type.Name</option>
                                     }
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="col-xs-3">
+                                    <button type="submit" class="btn btn-primary btn-block" asp-action="Index" asp-controller="Patient">Terug</button>
                                 </div>
                             </div>
                         </form>
