--- a/Webapp/Webapp/Views/Patient/Index.cshtml
+++ b/Webapp/Webapp/Views/Patient/Index.cshtml
@@ -25,8 +25,8 @@
                 <td>@item.Gender</td>
                 <td>@item.Birth.ToShortDateString()</td>
                 <td>
+                    @Html.ActionLink("Inzien", "Inzie", "Profile", new { id = item.UserId }) |
                     @Html.ActionLink("Edit Treatment", "Treatment", "Patient", new { id = item.UserId })
-
                 </td>
             </tr>
         }
