--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -14,6 +14,7 @@
 <table class="table table-striped table-hover" id="treatmentTable" style="width:100%;">
     <thead>
         <tr>
+            <th>Patient</th>
             <th>Naam</th>
             <th>StartDatum</th>
             <th>EindDatum</th>
@@ -23,6 +24,7 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>@item.PatientDetailViewModel.Name</td>
                 <td>@item.Name</td>
                 <td>@item.BeginDate</td>
                 <td>@item.EndDate</td>
