--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 <body>
     <div class="container" style="width:100%">
         <div class="row">
-            <div class="col-sm-3 col-xs-12" style="padding:0;">
+            <div class="col-sm-3 col-md-2 col-xs-12" style="padding:0;">
                 <div class="nav-side-menu" style="width:inherit;">
                     <div class="brand">Brand Logo</div>
                     <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
@@ -121,7 +121,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-9 col-xs-12">
+            <div class="col-sm-9 col-md-10 col-xs-12">
                 @RenderBody()
                 <hr />
                 <footer>
