--- a/Webapp/Webapp/Views/Department/Index.cshtml
+++ b/Webapp/Webapp/Views/Department/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Webapp.Models.Data.Department>
+﻿@model Webapp.Models.DepartmentViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -19,14 +19,14 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (DepartmentDetailViewModel vm in Model.Departments) {
         <tr>
-            <td>@item.Name</td>
-            <td>@item.Description</td>
+            <td>@Html.DisplayFor(modelItem => vm.Name)</td>
+            <td>@Html.DisplayFor(modelItem => vm.Description)</td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id = vm.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = vm.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = vm.Id })
             </td>
         </tr>
 }
