--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                                     <a href="#"><i class="fa fa-hospital-o fa-lg"></i> Afdelingen <span class="arrow"></span></a>
                                 </li>
                                 <ul class="sub-menu collapse" id="departments">
-                                    <li><i class="fa fa-area-chart fa-lg"></i> Overzicht</li>
+                                    <li><a asp-controller="Department" asp-action="Index"><i class="fa fa-area-chart fa-lg"></i> Overzicht</a></li>
                                     <li><i class="fa fa-users fa-lg"></i> Nieuwe toevoegen</li>
                                 </ul>
                                 <li data-toggle="collapse" data-target="#typeTreatment" class="collapsed">
