Added department views, updated menu for create department

--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                                 </li>
                                 <ul class="sub-menu collapse" id="departments">
                                     <li><a asp-controller="Department" asp-action="Index"><i class="fa fa-area-chart fa-lg"></i> Overzicht</a></li>
-                                    <li><i class="fa fa-users fa-lg"></i> Nieuwe toevoegen</li>
+                                    <li><a asp-controller="Department" asp-action="Create"><i class="fa fa-users fa-lg"></i> Nieuwe toevoegen</a></li>
                                 </ul>
                                 <li data-toggle="collapse" data-target="#typeTreatment" class="collapsed">
                                     <a href="#"><i class="fa fa-heartbeat fa-lg"></i> Type behandelingen <span class="arrow"></span></a>
