--- a/Webapp/Webapp/Views/Treatment/Add.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Add.cshtml
@@ -4,7 +4,7 @@
 }
 @model Webapp.Models.TreatmentDetailViewModel
 
-<h2>Doctor</h2>
+<h2>Arts</h2>
 <h2>@ViewBag.Bericht</h2>
 
 <link rel="stylesheet" href="~/css/User.css" />
@@ -20,28 +20,28 @@
                 <form class="form" method="post">
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <label for="name" class="h4">Patiënt</label>
-                            <select asp-for="PatientDetailViewModel" type="text" class="form-control" placeholder="Naam van de patiënt" title="Naam van de patiënt.">
+                            <label for="patientname" class="h4">Patiënt</label>
+                            <select asp-for="PatientId" type="text" class="form-control" placeholder="Naam van de patiënt" title="Naam van de patiënt.">
                                 @foreach (var Patient in Model.Patients)
                                 {
-                                <option>@Patient.Name</option>
+                                <option value="@Patient.UserId">@Patient.Name</option>
                                 }
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label for="Age"><h4>Behandelingsnaam</h4></label>
+                            <label for="treatmentname"><h4>Behandelingsnaam</h4></label>
                             <input type="text" class="form-control" asp-for="Name" placeholder="Naam van de behandeling" title="Naam van de behandeling.">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label for="nameTreatment"><h4>Behandelingstype</h4></label>
-                            <select asp-for="TreatmentTypeDetailViewModel" type="text" class="form-control" placeholder="Type van de behandeling" title="Type van de behandeling.">
+                            <label for="treatmenttype"><h4>Behandelingstype</h4></label>
+                            <select asp-for="TypeId" type="text" class="form-control" placeholder="Type van de behandeling" title="Type van de behandeling.">
                                 @foreach (var Type in Model.TreatmentTypes)
                                 {
-                                    <option>@Type.Name</option>
+                                    <option value="@Type.Id">@Type.Name</option>
                                 }
                             </select>
                         </div>
